samples/_failures_safe/1761278498_5ae575_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ae7289a.c: In function ‘print_token’:
./samples/SAFE/__tmp_3ae7289a.c:171:5: error: expected declaration or statement at end of input
  171 |     };
      |     ^
